로그인문제

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2715,7 +2715,8 @@
         <div class="admin-modal-content">
             <h3>🔐 관리자 로그인</h3>
             <p>관리자 아이디와 비밀번호를 입력하세요</p>
-            <input type="text" id="adminId" placeholder="아이디" style="margin-bottom:8px;">
+            <input type="text" id="adminId" placeholder="아이디" style="margin-bottom:8px;"
+                onkeypress="if(event.key==='Enter')document.getElementById('adminPassword').focus()">
             <input type="password" id="adminPassword" placeholder="비밀번호"
                 onkeypress="if(event.key==='Enter')loginAdmin()">
             <div class="admin-modal-btns">
@@ -3605,6 +3606,12 @@
 
     <script>
         const CUSTOMER_SYNC_URL = 'https://script.google.com/macros/s/AKfycbxrbmUDfHYanKtlqazwhgmBzyFTG4i7Cccm1mCTXiabkEtE9WzNOfR5hXoCfAAjhfR6Dg/exec';
+
+        // 메인 관리자 계정 (초기값)
+        const MAIN_ADMIN = {
+            id: 'admin',
+            password: 'admin'
+        };
 
         const categories = [
             { no: '01', name: '가설공사' }, { no: '02', name: '철거공사' }, { no: '03', name: '설비/방수공사' },
@@ -6968,9 +6975,10 @@
     <!-- 로그인 오버레이 (최우선 표시) -->
     <div class="login-overlay" id="loginOverlay">
         <div class="login-card">
-            <div class="login-logo">Design Jig</div>
+            <div class="login-logo">DESIGN JIG</div>
             <div class="login-subtitle">통합 관리 시스템</div>
-            <input type="text" class="login-input" id="loginId" placeholder="아이디" autocomplete="username">
+            <input type="text" class="login-input" id="loginId" placeholder="아이디" autocomplete="username"
+                onkeypress="if(event.key==='Enter') document.getElementById('loginPw').focus()">
             <input type="password" class="login-input" id="loginPw" placeholder="비밀번호" autocomplete="current-password"
                 onkeypress="if(event.key==='Enter') performLogin()">
             <button class="login-btn-primary" onclick="performLogin()">로그인</button>
