Fix: Add finalPaymentDate to sync payload for 잔금일

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -5775,6 +5775,7 @@
                         projectName: data.projectName || '',
                         siteAddress: data.siteAddress || '',
                         constructionPeriod: data.constructionPeriod || '',
+                        finalPaymentDate: data.finalPaymentDate || '', // 잔금일 추가
                         contractDate: data.contractDate || '', // Explicitly send Contract Date
                         warrantyPeriod: data.asEndDate ? (data.asEndDate) : '', // Send A/S End Date
                         // Note: For 'A/S 기간' (Warranty Period), if you want "YYYY.MM.DD ~ YYYY.MM.DD", construct it here.
