Change: 고객카드 평형 → 평수 레이블 변경

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3014,7 +3014,7 @@
                                             placeholder="연도. 월. 일." oninput="updateCustomerField(this)">
                                     </div>
                                     <div class="info-item">
-                                        <label>평형</label>
+                                        <label>평수</label>
                                         <input type="text" class="customer-field" data-field="area" placeholder="00평"
                                             oninput="updateCustomerField(this)"
                                             onblur="autoFormatArea(this); updateCustomerField(this)">
