Tmp: Add visible version tag 'v1.2 Patched' to header

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2688,7 +2688,9 @@
         <div class="logo">
             <a href="index.html" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
                 <div class="logo-icon">DJ</div>
-                <div class="logo-text">디자인지그 <span>통합 관리 시스템</span></div>
+                <div class="logo-text">디자인지그 <span>통합 관리 시스템</span> <span
+                        style="font-size:11px; color:#ff3b30; background:#ffe5e5; padding:2px 6px; border-radius:4px;">v1.2
+                        Patched</span></div>
             </a>
         </div>
         <div class="header-actions">
