--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>디자인지그 통합 관리 시스템 (v1.2)</title>
+    <title>디자인지그 통합 관리 시스템</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script src="https://upload-widget.cloudinary.com/6.8.1/global/all.js" type="text/javascript"></script>
     <!-- 환경 설정 파일 로드 (비밀번호 등) -->
@@ -2688,9 +2688,7 @@
         <div class="logo">
             <a href="index.html" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
                 <div class="logo-icon">DJ</div>
-                <div class="logo-text">디자인지그 <span>통합 관리 시스템</span> <span
-                        style="font-size:11px; color:#ff3b30; background:#ffe5e5; padding:2px 6px; border-radius:4px;">v1.2
-                        Patched</span></div>
+                <div class="logo-text">디자인지그 <span>통합 관리 시스템</span></div>
             </a>
         </div>
         <div class="header-actions">
@@ -5368,9 +5366,6 @@
             const customer = customers.find(c => c.customerId === customerId);
             if (!customer) return;
             currentCustomerId = customerId;
-
-            // [Debug] 임시 데이터 확인용 (문제가 지속되면 이 팝업 내용을 캡처해주세요)
-            alert(`[데이터 확인]\nID: ${customerId}\n유입경로(원본): ${customer.inflowPath}\n유입경로(매핑): ${customer.clientSource}\n건물유형: ${customer.buildingType}\n평수: ${customer.pyeong}`);
 
             // Legacy Data Compatibility (Cloud Compatibility Fix)
             // Ensure old keys (pyeong, estimateProfitRate) map to new inputs (area, profitRate) if new keys are missing
