--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -6263,9 +6263,12 @@
             }
 
             const items = getItemsByDivInCat(catNo, div);
-            nameSelect.innerHTML = '<option value="">품명 선택</option>' + items.map((item, i) =>
-                `<option value="${i}" data-spec="${item.spec}" data-unit="${item.unit}" data-price="${item.unitPrice}">
-                ${item.name}</option>`
+
+            // 고유한 품명만 추출 (중복 제거)
+            const uniqueNames = [...new Set(items.map(item => item.name).filter(n => n))];
+
+            nameSelect.innerHTML = '<option value="">품명 선택</option>' + uniqueNames.map(name =>
+                `<option value="${name}">${name}</option>`
             ).join('');
             nameSelect.disabled = false;
             resetEstRowValues(row);
@@ -6281,27 +6284,28 @@
                 return;
             }
 
-            const selectedName = option.textContent; // 선택된 품명
+            const selectedName = option.value.trim(); // 선택된 품명 (value가 품명 이름)
             const divSelect = row.querySelector('.div-select');
             const div = divSelect ? divSelect.value : '';
 
             // 같은 구분 내에서 같은 품명을 가진 항목들 찾기
             const items = getItemsByDivInCat(catNo, div);
-            const sameNameItems = items.filter(item => item.name === selectedName);
+            const sameNameItems = items.filter(item => item.name && item.name.trim() === selectedName);
 
             if (sameNameItems.length > 1) {
                 // 같은 품명이 여러 개 있으면 상세내용 드롭다운 표시
                 const specCell = row.querySelector('.spec-cell');
                 const specOptions = sameNameItems.map((item, i) =>
-                    `<option value="${i}" data-spec="${item.spec}" data-unit="${item.unit}" data-price="${item.unitPrice}">
-                ${item.spec || '(없음)'}</option>`
+                    `<option value="${i}" data-spec="${item.spec || ''}" data-unit="${item.unit || ''}" data-price="${item.unitPrice || 0}">
+                ${item.spec || '(상세내용 없음)'}</option>`
                 ).join('');
 
                 specCell.innerHTML = `
-            <select class="spec-select" onchange="onEstSpecSelect(this)"
+            <select class="spec-select" onchange="onEstSpecSelect(this, '${catNo}')"
                 style="width:100%; padding:4px; border:1px solid #0071e3; border-radius:4px; font-size:11px; background:#f0f7ff;">
                 <option value="">상세 선택</option>
-                ${specOptions}                <option value="__custom__">✏️ 직접입력</option>
+                ${specOptions}
+                <option value="__custom__">✏️ 직접입력</option>
             </select>
             `;
 
@@ -6310,12 +6314,23 @@
                 row.querySelector('.price-cell').textContent = '-';
                 row.querySelector('.price-cell').dataset.price = '0';
                 row.querySelector('.amount-cell').textContent = '-';
-            } else {
-                // 같은 품명이 하나만 있으면 기존처럼 자동 입력
-                const spec = option.dataset.spec || '-';
-                const unit = option.dataset.unit || '-';
-                const price = parseInt(option.dataset.price) || 0;
-                const qty = parseInt(row.querySelector('.qty-input').value) || 1;
+            } else if (sameNameItems.length === 1) {
+                // 같은 품명이 하나만 있으면 자동 입력
+                const item = sameNameItems[0];
+                const spec = item.spec || '-';
+                const unit = item.unit || '-';
+                const price = parseInt(item.unitPrice) || 0;
+
+                // 단위가 "평"이면 고객 정보의 평수를 자동 입력
+                let qty = parseInt(row.querySelector('.qty-input').value) || 1;
+                if (unit === '평' || unit === 'py') {
+                    const customerArea = getCustomerArea();
+                    if (customerArea > 0) {
+                        qty = customerArea;
+                        row.querySelector('.qty-input').value = qty;
+                    }
+                }
+
                 const amount = price * qty;
 
                 row.querySelector('.spec-cell').textContent = spec;
@@ -6323,6 +6338,9 @@
                 row.querySelector('.price-cell').textContent = formatNumber(price);
                 row.querySelector('.price-cell').dataset.price = price;
                 row.querySelector('.amount-cell').textContent = formatNumber(amount);
+            } else {
+                // 항목을 찾지 못한 경우
+                resetEstRowValues(row);
             }
 
             updateCategorySubtotal(catNo);
@@ -6330,8 +6348,20 @@
             saveEstimateData();
         }
 
+        // 고객 평수 가져오기
+        function getCustomerArea() {
+            if (!currentCustomerId) return 0;
+            const customer = customers.find(c => c.customerId === currentCustomerId);
+            if (!customer) return 0;
+
+            // 평수 파싱 (숫자만 추출)
+            const areaStr = customer.area || customer.pyeong || '';
+            const match = areaStr.toString().match(/[\d.]+/);
+            return match ? parseFloat(match[0]) : 0;
+        }
+
         // 계약견적서 상세내용 드롭다운 선택 시
-        function onEstSpecSelect(select) {
+        function onEstSpecSelect(select, catNo) {
             const row = select.closest('tr');
             const option = select.selectedOptions[0];
 
@@ -6354,7 +6384,17 @@
             // 선택된 상세내용의 단위, 단가 적용
             const unit = option.dataset.unit || '-';
             const price = parseInt(option.dataset.price) || 0;
-            const qty = parseInt(row.querySelector('.qty-input').value) || 1;
+
+            // 단위가 "평"이면 고객 정보의 평수를 자동 입력
+            let qty = parseInt(row.querySelector('.qty-input').value) || 1;
+            if (unit === '평' || unit === 'py') {
+                const customerArea = getCustomerArea();
+                if (customerArea > 0) {
+                    qty = customerArea;
+                    row.querySelector('.qty-input').value = qty;
+                }
+            }
+
             const amount = price * qty;
 
             row.querySelector('.unit-cell').textContent = unit;
@@ -6363,8 +6403,8 @@
             row.querySelector('.amount-cell').textContent = formatNumber(amount);
 
             // 소계 업데이트
-            const catNo = row.closest('tbody').id.replace('estBody', '');
-            updateCategorySubtotal(catNo);
+            const effectiveCatNo = catNo || row.closest('tbody').id.replace('estBody', '');
+            updateCategorySubtotal(effectiveCatNo);
             updateEstimateTotals();
             saveEstimateData();
         }
