관리자-원가관리표-연동

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -6969,11 +6969,23 @@
             const name = categoryName.trim();
 
             const categoryMap = {
-                '가설공사': '01', '주방': '02', '가구': '03', '가구(수납)': '03',
-                '바닥': '04', '벽': '05', '지기': '06', '도장': '07',
-                '창호': '08', '금속': '09', '위생': '10', '전기': '11',
-                '설비': '12', '아트월': '13', '기타': '14', '잡비': '15',
-                '소방': '16', '탄소': '17'
+                '가설공사': '01', '가설': '01',
+                '철거공사': '02', '철거': '02',
+                '설비/방수공사': '03', '설비': '03', '방수': '03',
+                '확장/단열공사': '04', '확장': '04', '단열': '04',
+                '창호공사': '05', '창호': '05',
+                '전기/조명공사': '06', '전기': '06', '조명': '06',
+                '에어컨공사': '07', '에어컨': '07',
+                '목공/도어공사': '08', '목공': '08', '도어': '08',
+                '필름공사': '09', '필름': '09',
+                '타일공사': '10', '타일': '10',
+                '욕실공사': '11', '욕실': '11',
+                '도장공사': '12', '도장': '12',
+                '도배공사': '13', '도배': '13',
+                '바닥재공사': '14', '바닥': '14', '바닥재': '14',
+                '가구공사': '15', '가구': '15', '싱크대': '15', '신발장': '15', '붙박이장': '15',
+                '마감공사': '16', '마감': '16',
+                '기타공사': '17', '기타': '17'
             };
 
             return categoryMap[name] || null;
